--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "name": "aero-livechat",
+  "version": "0.0.2",
+  "description": "Livechat using node.js, socket.io package and aerospike DB.",
   "keywords": [
-    "OpenShift",
     "Node.js",
     "application",
-    "openshift"
+    "livechat",
+    "socket.io",
+    "websockets",
+    "aerospike"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Enrique Sampaio",
+    "email": "developer@enriquesampaio.com",
+    "url": "http://www.enriquesampaio.com/"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://www.enriquesampaio.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "url": "https://github.com/EnriqueSampaio/aero-livechat"
   },
   "engines": {
     "node": ">= 0.6.0",
